--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -178,7 +178,7 @@
                         <div class="p-4">
                             <div class="video-container">
                                 <!-- COLE SEU IFRAME AQUI -->
-<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fiepafontededeus%2Fposts%2Fpfbid0Yk68i7wiXn3Jqj8zRgapCwNrcDvBu7xwwGpiErLe7uEtzCcWix5MDCmsR2Q5pc3Hl&show_text=false&width=500" width="500" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
 
                                 <div class="video-placeholder bg-gray-700 text-gray-400">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
@@ -187,7 +187,7 @@
                             
                             <!-- ========== CONTROLE DE STATUS (ONLINE / OFFLINE) ========== -->
 
-                            <!-- 1. OPÇÃO ONLINE (Vermelho Pulsante) --->
+                            <!-- 1. OPÇÃO ONLINE (Vermelho Pulsante) 
                             <div class="mt-3 p-3 bg-gray-700 rounded border border-gray-600 text-sm flex items-center justify-center gap-2 text-gray-300">
                                 <span class="relative flex h-2.5 w-2.5">
                                   <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
@@ -195,15 +195,15 @@
                                 </span>
                                 <span class="font-bold text-amber-500 uppercase text-xs">No Ar:</span> Culto de Quarta
                             </div>
-
-                            <!-- 2. OPÇÃO OFFLINE (Cinza Estático) 
+--->
+                            <!-- 2. OPÇÃO OFFLINE (Cinza Estático) --->
                             <div class="mt-3 p-3 bg-gray-700 rounded border border-gray-600 text-sm flex items-center justify-center gap-2 text-gray-400">
                                 <span class="relative flex h-2.5 w-2.5">
                                   <span class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gray-500"></span>
                                 </span>
                                 <span class="font-bold uppercase text-xs">Status:</span> Sem transmissão
                             </div>
-                          --->
+                          
                         </div>
                     </div>
 
